# src/app/authentication/business/ValidateUserOtpServices.go
@@ -32,27 +32,27 @@ func NewValidateUserOtpServiceForTest(mockRepo repository.ValidateUserOtpReposit
 }
 
 // this function takes userRequest, fetches the user from db(via repository), performs all otp validations and returns error/ nil
-func (service *ValidateUserOtpService) ValidateUserOtp(ctx context.Context, spanCtx context.Context, bffValidateUserOtpRequest models.BFFValidateUserOtpRequest) (string, string, error) {
+func (service *ValidateUserOtpService) ValidateUserOtp(ctx context.Context, spanCtx context.Context, bffValidateUserOtpRequest models.BFFValidateUserOtpRequest) (string, error) {
 	// postgresClinet := utils.GetPostgresClient().GormDB
 	userFromDB, err := service.repository.GetUserByUsername(spanCtx, service.db, bffValidateUserOtpRequest.Username)
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return "", "", commons.UserNotFoundError //errors.New(constants.ErrUserNotFound)
+			return "", commons.UserNotFoundError //errors.New(constants.ErrUserNotFound)
 		}
-		return "", "", err
+		return "", err
 	}
 
 	if !utils.CompareUserRequestOTP(userFromDB.OtpSent, bffValidateUserOtpRequest.Otp) {
-		return "", "", commons.IncorrectOTPError //errors.New(constants.ErrIncorrectOtp)
+		return "", commons.IncorrectOTPError //errors.New(constants.ErrIncorrectOtp)
 	}
 
 	if !utils.CheckOtpExpiry(userFromDB.OtpExpiresAt, time.Now()) {
-		return "", "", commons.OtpExpiredError //errors.New(constants.ErrExpiredOtp)
+		return "", commons.OtpExpiredError //errors.New(constants.ErrExpiredOtp)
 	}
 
-	accessToken, refreshToken, err := utils.GenerateToken(bffValidateUserOtpRequest.Username)
+	accessToken, _, err := utils.GenerateToken(bffValidateUserOtpRequest.Username)
 	if err != nil {
-		return "", "", err
+		return "", err
 	}
-	return accessToken, refreshToken, nil
+	return accessToken, nil
 }
