# src/app/authentication/docs/swagger.yaml
@@ -1,4 +1,22 @@
 definitions:
+  models.BFFChangePasswordRequest:
+    properties:
+      confirm_password:
+        minLength: 8
+        type: string
+      new_password:
+        maxLength: 20
+        minLength: 8
+        type: string
+    required:
+    - confirm_password
+    - new_password
+    type: object
+  models.BFFChangePasswordResponse:
+    properties:
+      message:
+        type: string
+    type: object
   models.BFFCreateUserRequest:
     properties:
       confirmPassword:
@@ -58,7 +76,6 @@ definitions:
   models.BFFValidateUserOtpRequest:
     properties:
       otp:
-        example: "1234"
         type: string
       username:
         example: Arijit
@@ -71,6 +88,8 @@ definitions:
     type: object
   models.BFFValidateUserOtpResponse:
     properties:
+      accessToken:
+        type: string
       message:
         type: string
     type: object
@@ -90,7 +109,51 @@ definitions:
     type: object
 info:
   contact: {}
+  description: Authentication APIs for Stock Broker Application
+  title: Authentication Service API
+  version: "1.0"
 paths:
+  /api/auth/change-password:
+    post:
+      consumes:
+      - application/json
+      description: verifies the JWT and user request and changes user's password
+      parameters:
+      - description: User Change-Password Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.BFFChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Password Changed successfully
+          schema:
+            $ref: '#/definitions/models.BFFChangePasswordResponse'
+        "400":
+          description: Invalid input payload
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+        "401":
+          description: 'Case A: JWT expired / Case B: JWT invalid / Case C: Unauthorized
+            request'
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+        "404":
+          description: User does not exist
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Changes user's password
+      tags:
+      - User
   /api/auth/signin:
     post:
       consumes:
@@ -202,4 +265,10 @@ paths:
       summary: Validates user OTP
       tags:
       - User
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
+    x-extension-openapi: '{"example": "value on a json format"}'
 swagger: "2.0"
