# src/app/authentication/handlers/ValidateUserOtpHandler.go
@@ -59,7 +59,7 @@ func (controller *ValidateUserOtpHandler) HandleValidateUserOtp(ctx *gin.Context
 		return
 	}
 
-	accessToken, refreshToken, errWhileOtpValidation := controller.service.ValidateUserOtp(ctx, ctx.Request.Context(), bffValidateUserOtpRequest)
+	accessToken, errWhileOtpValidation := controller.service.ValidateUserOtp(ctx, ctx.Request.Context(), bffValidateUserOtpRequest)
 	if errWhileOtpValidation != nil {
 		if errors.Is(errWhileOtpValidation, commons.UserNotFoundError) { //errors.New(constants.ErrUserNotFound)
 			errorUserNotFoundResponse := genericModels.ErrorAPIResponse{
@@ -106,6 +106,5 @@ func (controller *ValidateUserOtpHandler) HandleValidateUserOtp(ctx *gin.Context
 	ctx.IndentedJSON(http.StatusOK, models.BFFValidateUserOtpResponse{
 		Message:      constants.OtpValidatedSuccessMsg,
 		AccessToken:  accessToken,
-		RefreshToken: refreshToken,
 	})
 }
