# src/app/authentication/models/validateUserOtpModel.go
@@ -6,7 +6,6 @@ type BFFValidateUserOtpRequest struct {
 }
 
 type BFFValidateUserOtpResponse struct {
-	Message      string `json:"message"`
-	AccessToken  string `json:"accessToken"`
-	RefreshToken string `json:"refreshToken"`
+	Message     string `json:"message"`
+	AccessToken string `json:"accessToken"`
 }
